@@ -4,7 +4,14 @@
                 #:ok
                 #:testing
                 #:deftest)
-  (:import-from #:40ants-doc/commondoc/builder))
+  (:import-from #:40ants-doc/commondoc/builder)
+  (:import-from #:common-doc
+                #:make-text
+                #:make-content)
+  (:import-from #:40ants-doc/commondoc/xref
+                #:fill-locatives
+                #:xref-locative
+                #:make-xref))
 (in-package 40ants-doc-test/xref)
 
 
@@ -51,3 +58,34 @@
 
           (testing "But it's child should be changed to a real web link"
             (ok (typep (first-child) 'common-doc:document-link))))))))
+
+
+(deftest test-filling-locatives
+  (testing "When no locatives are around the xref"
+    (let* ((xref (make-xref "LISP"))
+           (doc (make-content
+                 (list (make-text "Hello")
+                       xref
+                       (make-text "World")))))
+      (fill-locatives doc)
+      (ok (null (xref-locative xref)))))
+  
+  (testing "When locative is on the right"
+    (let* ((xref (make-xref "LISP"))
+           (doc (make-content
+                 (list (make-text "This is a ")
+                       xref
+                       (make-text " function.")))))
+      (fill-locatives doc)
+      (ok (eql (xref-locative xref)
+               '40ants-doc/locatives:function))))
+  
+  (testing "When locative is on the left"
+    (let* ((xref (make-xref "FOO"))
+           (doc (make-content
+                 (list (make-text "It returns an object of class ")
+                       xref
+                       (make-text " and calls a function.")))))
+      (fill-locatives doc)
+      (ok (eql (xref-locative xref)
+               '40ants-doc/locatives:class)))))
