@@ -13,3 +13,5 @@ because all locative symbols now live in 40ANTS-DOC/LOCATIVES package.
 automatic symbol rendering for case when documentation section and
 referenced objects are in different packages.
 * Allowed to reference objects using keywords.
+
+* Fixed docstring extraction for compiler macro.
